main 36 Custom events from parent to child

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.box {
+  padding: 1em;
+  box-sizing: border-box;
+  border-radius: .2em;
+}
+
+.red {
+  border: 1px solid red;
+}
+.blue {
+  border: 1px solid blue;
+}
